<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">
    <string name="app_name">Home Automation System</string>
    <string name="signIn">Sign In</string>
    <string name="register">Register</string>
    <string name="enterEmail">Enter email</string>
    <string name="enterPass">Enter password</string>
    <string name="welcomeLogin">Welcome, please login</string>
    <string name="enterFirstName">First name</string>
    <string name="enterLastName">Last name</string>
    <string name="see_more">See more</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="sensors">Sensors</string>
    <string name="actuators">Actuators</string>
    <string name="activeRules">Active rules</string>
    <string name="title_activity_user_profile">Profile</string>
    <string name="enter_new_email">Enter new email</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="enter_old_password">Enter old password</string>
    <string name="change">Change</string>

    <!-- Add Device-->
    <string name="device_action">Value</string>
    <string name="device_value">Value</string>
    <string name="device_name">Name</string>
    <string name="device_description">Description</string>
    <string name="button_add">Add</string>
    <string name="button_edit">Edit</string>
    <string name="button_cancel">Cancel</string>
    <string name="add_device_title">Add new device</string>
    <string name="edit_device_title">Edit device</string>
    <string name="add_sensor">Add sensor</string>
    <string name="edit_sensor">Edit sensor</string>
    <string name="add_actuator">Add actuator</string>
    <string name="edit_actuator">Edit actuator</string>
    <string name="add_action">Add action</string>
    <string name="add_rule">Add rule</string>
    <string name="edit_rule">Edit rule</string>
    <string name="share_device">Share device</string>
    <string name="share_device_user_email">Enter user email</string>
    <string name="title">Title</string>


    <string name="edit_action">Edit action</string>

    <!-- Preference Titles -->
    <string name="user_profile_header">User profile</string>
    <string name="devices_header">Devices</string>

    <!-- Messages Preferences -->
    <string name="email_title">Email</string>
    <string name="first_name_title">First name</string>
    <string name="last_name_title">Last name</string>
    <string name="password_title">Password</string>
    <string name="password_summary">Change password</string>
    <string name="logout_title">Log out</string>
    <string name="logout_summary">Includes synchronisation</string>
    <string name="shared_device_title">Shared devices</string>
    <string name="shared_device_summary">Information about shared devices</string>

    <string name="actions">Actions</string>
    <string name="edit">Edit</string>
    <string name="header">Header</string>
    <string name="description">Description</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="automation_rules">Automation rules</string>
    <string name="user_profile">User profile</string>
    <string name="ham">Home Automation Application</string>
    <string name="devices">Devices</string>
    <string name="settings">Settings</string>
    <string name="add_sensor_and_actuator">Add sensor and actuator</string>


    <!-- Settings-->
    <string name="title_activity_settings">Settings</string>
    <string name="language_title">Language</string>
    <string name="serbian_label">Serbian</string>
    <string name="english_label">English</string>
    <string name="theme_title">Theme</string>
    <string name="light_theme_label">Light</string>
    <string name="dark_theme_label">Dark</string>
    <string name="change_personal_information">Change personal information</string>
    <string name="logout">Log out</string>

    <!-- messages -->
    <string name="deleted">Deleted</string>
    <string name="fill_device_data">Please fill in device data</string>
    <string name="fill_sensor_data">Please fill in all sensor data</string>
    <string name="fill_actuator_data">Please fill in all actuator data</string>
    <string name="fill_rule_data">Please fill in rule data</string>
    <string name="fill_action_data">Please fill in all action data</string>
    <string name="login_unsuccessful">Login unsuccessful</string>
    <string name="fill_user_email">Please fill in user email</string>
    <string name="fill_email_pass">Please fill in email or password fields</string>
    <string name="fill_wrong_pass">Wrong password</string>
    <string name="btn_change_language">Change language</string>
    <string name="relation">Relation</string>
    <string name="text">Text</string>
    <string name="button_ok">OK</string>
    <string name="sensor_id">Sensor ID</string>
    <string name="actuator_id">Actuator ID</string>
    <string name="actuator_value_changed">Actuator value changed to:</string>


    <string-array name="devices_array">
        <item>Sensor</item>
        <item>Actuator</item>
    </string-array>

</resources>
